--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -29,7 +29,7 @@
                 @foreach (var car in Model)
                 {
                     <div class="swiper-slide">
-                        <div class="card h-100 border-0">
+                        <div class="card h-100 border-0" style="background: var(--card-bg); color: var(--text-color);">
                             @if (car.DiscountPercentage.HasValue && car.DiscountPercentage > 0)
                             {
                                 <div class="card-discount">%@car.DiscountPercentage İndirim</div>
@@ -42,7 +42,7 @@
                             {
                                 <img src="/images/default-car.jpg" class="card-img-top" alt="@car.Brand @car.Model">
                             }
-                            <div class="card-body">
+                            <div class="card-body" style="color: var(--text-color);">
                                 <h5 class="card-title">@car.Brand @car.Model</h5>
                                 <div class="d-flex justify-content-between align-items-center mb-2">
                                     <span class="card-price">
